Tools/Lex/SpecParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SpecParser.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace PreAdamant.Compiler.Tools.Lex {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class SpecParser : Parser {
	public const int
		Comment=1, Whitespace=2, Lexer=3, Namespace=4, Modes=5, Channels=6, Import=7, 
		StartMode=8, Include=9, ModeCmd=10, PushModeCmd=11, PopModeCmd=12, SkipCmd=13, 
		MoreCmd=14, TypeCmd=15, ChannelCmd=16, ErrorCmd=17, CaptureCmd=18, DecodeCmd=19, 
		TextCmd=20, ActionCmd=21, OfType=22, Scope=23, Definition=24, Alternation=25, 
		BeginCharClass=26, AnyChar=27, Optional=28, Complement=29, Repetition=30, 
		OneOrMore=31, Intersection=32, Subtraction=33, Upto=34, BeginGroup=35, 
		EndGroup=36, BeginningOfLine=37, EndOfLine=38, LeftBrace=39, RightBrace=40, 
		BeginCommands=41, Terminator=42, Comma=43, PredefinedClass=44, Number=45, 
		Identifier=46, Literal=47, InvalidKeyword=48, UnexpectedChar=49, Char=50, 
		Caret=51, EscapedChar=52, InvalidEscapedChar=53, EscapedDash=54, EscapedRightBracket=55, 
		Dash=56, EndCharClass=57;
	public const int
		RULE_spec = 0, RULE_directive = 1, RULE_parseRule = 2, RULE_pattern = 3, 
		RULE_charSet = 4, RULE_char = 5, RULE_command = 6;
	public static readonly string[] ruleNames = {
		"spec", "directive", "parseRule", "pattern", "charSet", "char", "command"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'@lexer'", "'@namespace'", "'@modes'", "'@channels'", 
		"'@import'", "'@startMode'", "'@include'", "'@mode'", "'@pushMode'", "'@popMode'", 
		"'@skip'", "'@more'", "'@type'", "'@channel'", "'@error'", "'@capture'", 
		"'@decode'", "'@text'", "'@action'", "':'", "'::'", "'='", "'|'", "'['", 
		"'.'", "'?'", "'!'", "'*'", "'+'", "'&'", null, "'~'", "'('", "')'", null, 
		"'$'", "'{'", "'}'", "'->'", "';'", "','", null, null, null, null, null, 
		null, null, null, null, null, "'\\-'", "'\\]'", null, "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Comment", "Whitespace", "Lexer", "Namespace", "Modes", "Channels", 
		"Import", "StartMode", "Include", "ModeCmd", "PushModeCmd", "PopModeCmd", 
		"SkipCmd", "MoreCmd", "TypeCmd", "ChannelCmd", "ErrorCmd", "CaptureCmd", 
		"DecodeCmd", "TextCmd", "ActionCmd", "OfType", "Scope", "Definition", 
		"Alternation", "BeginCharClass", "AnyChar", "Optional", "Complement", 
		"Repetition", "OneOrMore", "Intersection", "Subtraction", "Upto", "BeginGroup", 
		"EndGroup", "BeginningOfLine", "EndOfLine", "LeftBrace", "RightBrace", 
		"BeginCommands", "Terminator", "Comma", "PredefinedClass", "Number", "Identifier", 
		"Literal", "InvalidKeyword", "UnexpectedChar", "Char", "Caret", "EscapedChar", 
		"InvalidEscapedChar", "EscapedDash", "EscapedRightBracket", "Dash", "EndCharClass"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SpecParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SpecParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class SpecContext : ParserRuleContext {
		public DirectiveContext[] directive() {
			return GetRuleContexts<DirectiveContext>();
		}
		public DirectiveContext directive(int i) {
			return GetRuleContext<DirectiveContext>(i);
		}
		public ParseRuleContext[] parseRule() {
			return GetRuleContexts<ParseRuleContext>();
		}
		public ParseRuleContext parseRule(int i) {
			return GetRuleContext<ParseRuleContext>(i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_spec; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterSpec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitSpec(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpecContext spec() {
		SpecContext _localctx = new SpecContext(Context, State);
		EnterRule(_localctx, 0, RULE_spec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 18;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Lexer) | (1L << Namespace) | (1L << Modes) | (1L << Channels) | (1L << Import) | (1L << StartMode) | (1L << Include) | (1L << Identifier))) != 0)) {
				{
				State = 16;
				switch (TokenStream.La(1)) {
				case Lexer:
				case Namespace:
				case Modes:
				case Channels:
				case Import:
				case StartMode:
				case Include:
					{
					State = 14; directive();
					}
					break;
				case Identifier:
					{
					State = 15; parseRule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 20;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
	 
		public DirectiveContext() { }
		public virtual void CopyFrom(DirectiveContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ImportDirectiveContext : DirectiveContext {
		public IToken alias;
		public IToken lexerName;
		public ITerminalNode[] Identifier() { return GetTokens(SpecParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(SpecParser.Identifier, i);
		}
		public ImportDirectiveContext(DirectiveContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterImportDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitImportDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NameDirectiveContext : DirectiveContext {
		public ITerminalNode Identifier() { return GetToken(SpecParser.Identifier, 0); }
		public NameDirectiveContext(DirectiveContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterNameDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitNameDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNameDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StartModeDirectiveContext : DirectiveContext {
		public ITerminalNode Identifier() { return GetToken(SpecParser.Identifier, 0); }
		public StartModeDirectiveContext(DirectiveContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterStartModeDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitStartModeDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStartModeDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NamespaceDirectiveContext : DirectiveContext {
		public ITerminalNode[] Identifier() { return GetTokens(SpecParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(SpecParser.Identifier, i);
		}
		public NamespaceDirectiveContext(DirectiveContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterNamespaceDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitNamespaceDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ChannelsDirectiveContext : DirectiveContext {
		public IToken _Identifier;
		public IList<IToken> _channels = new List<IToken>();
		public ITerminalNode[] Identifier() { return GetTokens(SpecParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(SpecParser.Identifier, i);
		}
		public ChannelsDirectiveContext(DirectiveContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterChannelsDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitChannelsDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChannelsDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IncludeDirectiveContext : DirectiveContext {
		public IToken lexerName;
		public IToken ruleName;
		public ITerminalNode[] Identifier() { return GetTokens(SpecParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(SpecParser.Identifier, i);
		}
		public IncludeDirectiveContext(DirectiveContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterIncludeDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitIncludeDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncludeDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ModesDirectiveContext : DirectiveContext {
		public IToken _Identifier;
		public IList<IToken> _modes = new List<IToken>();
		public ITerminalNode[] Identifier() { return GetTokens(SpecParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(SpecParser.Identifier, i);
		}
		public DirectiveContext[] directive() {
			return GetRuleContexts<DirectiveContext>();
		}
		public DirectiveContext directive(int i) {
			return GetRuleContext<DirectiveContext>(i);
		}
		public ParseRuleContext[] parseRule() {
			return GetRuleContexts<ParseRuleContext>();
		}
		public ParseRuleContext parseRule(int i) {
			return GetRuleContext<ParseRuleContext>(i);
		}
		public ModesDirectiveContext(DirectiveContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterModesDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitModesDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModesDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 2, RULE_directive);
		int _la;
		try {
			State = 77;
			switch (TokenStream.La(1)) {
			case Lexer:
				_localctx = new NameDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 21; Match(Lexer);
				State = 22; Match(Identifier);
				State = 23; Match(Terminator);
				}
				break;
			case Namespace:
				_localctx = new NamespaceDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 24; Match(Namespace);
				State = 25; Match(Identifier);
				State = 30;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==AnyChar) {
					{
					{
					State = 26; Match(AnyChar);
					State = 27; Match(Identifier);
					}
					}
					State = 32;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 33; Match(Terminator);
				}
				break;
			case Import:
				_localctx = new ImportDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 34; Match(Import);
				State = 37;
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 35; ((ImportDirectiveContext)_localctx).alias = Match(Identifier);
					State = 36; Match(Definition);
					}
					break;
				}
				State = 39; ((ImportDirectiveContext)_localctx).lexerName = Match(Identifier);
				State = 40; Match(Terminator);
				}
				break;
			case StartMode:
				_localctx = new StartModeDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 41; Match(StartMode);
				State = 42; Match(Identifier);
				State = 43; Match(Terminator);
				}
				break;
			case Channels:
				_localctx = new ChannelsDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 44; Match(Channels);
				State = 45; ((ChannelsDirectiveContext)_localctx)._Identifier = Match(Identifier);
				((ChannelsDirectiveContext)_localctx)._channels.Add(((ChannelsDirectiveContext)_localctx)._Identifier);
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==Comma) {
					{
					{
					State = 46; Match(Comma);
					State = 47; ((ChannelsDirectiveContext)_localctx)._Identifier = Match(Identifier);
					((ChannelsDirectiveContext)_localctx)._channels.Add(((ChannelsDirectiveContext)_localctx)._Identifier);
					}
					}
					State = 52;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 53; Match(Terminator);
				}
				break;
			case Include:
				_localctx = new IncludeDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 54; Match(Include);
				State = 55; ((IncludeDirectiveContext)_localctx).lexerName = Match(Identifier);
				State = 56; Match(Scope);
				State = 57; ((IncludeDirectiveContext)_localctx).ruleName = Match(Identifier);
				State = 58; Match(Terminator);
				}
				break;
			case Modes:
				_localctx = new ModesDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 59; Match(Modes);
				State = 60; ((ModesDirectiveContext)_localctx)._Identifier = Match(Identifier);
				((ModesDirectiveContext)_localctx)._modes.Add(((ModesDirectiveContext)_localctx)._Identifier);
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==Comma) {
					{
					{
					State = 61; Match(Comma);
					State = 62; ((ModesDirectiveContext)_localctx)._Identifier = Match(Identifier);
					((ModesDirectiveContext)_localctx)._modes.Add(((ModesDirectiveContext)_localctx)._Identifier);
					}
					}
					State = 67;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 68; Match(LeftBrace);
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Lexer) | (1L << Namespace) | (1L << Modes) | (1L << Channels) | (1L << Import) | (1L << StartMode) | (1L << Include) | (1L << Identifier))) != 0)) {
					{
					State = 71;
					switch (TokenStream.La(1)) {
					case Lexer:
					case Namespace:
					case Modes:
					case Channels:
					case Import:
					case StartMode:
					case Include:
						{
						State = 69; directive();
						}
						break;
					case Identifier:
						{
						State = 70; parseRule();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					State = 75;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 76; Match(RightBrace);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParseRuleContext : ParserRuleContext {
		public IToken name;
		public IToken @base;
		public CommandContext _command;
		public IList<CommandContext> _commands = new List<CommandContext>();
		public ITerminalNode[] Identifier() { return GetTokens(SpecParser.Identifier); }
		public ITerminalNode Identifier(int i) {
			return GetToken(SpecParser.Identifier, i);
		}
		public PatternContext pattern() {
			return GetRuleContext<PatternContext>(0);
		}
		public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public ParseRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parseRule; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterParseRule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitParseRule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParseRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseRuleContext parseRule() {
		ParseRuleContext _localctx = new ParseRuleContext(Context, State);
		EnterRule(_localctx, 4, RULE_parseRule);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; _localctx.name = Match(Identifier);
			State = 82;
			_la = TokenStream.La(1);
			if (_la==OfType) {
				{
				State = 80; Match(OfType);
				State = 81; _localctx.@base = Match(Identifier);
				}
			}

			State = 97;
			_la = TokenStream.La(1);
			if (_la==Definition) {
				{
				State = 84; Match(Definition);
				State = 85; pattern(0);
				State = 95;
				_la = TokenStream.La(1);
				if (_la==BeginCommands) {
					{
					State = 86; Match(BeginCommands);
					State = 87; _localctx._command = command();
					_localctx._commands.Add(_localctx._command);
					State = 92;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
					while (_la==Comma) {
						{
						{
						State = 88; Match(Comma);
						State = 89; _localctx._command = command();
						_localctx._commands.Add(_localctx._command);
						}
						}
						State = 94;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
					}
					}
				}

				}
			}

			State = 99; Match(Terminator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PatternContext : ParserRuleContext {
		public PatternContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pattern; } }
	 
		public PatternContext() { }
		public virtual void CopyFrom(PatternContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LiteralPatternContext : PatternContext {
		public ITerminalNode Literal() { return GetToken(SpecParser.Literal, 0); }
		public LiteralPatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterLiteralPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitLiteralPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteralPattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DifferencePatternContext : PatternContext {
		public PatternContext[] pattern() {
			return GetRuleContexts<PatternContext>();
		}
		public PatternContext pattern(int i) {
			return GetRuleContext<PatternContext>(i);
		}
		public ITerminalNode Subtraction() { return GetToken(SpecParser.Subtraction, 0); }
		public DifferencePatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterDifferencePattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitDifferencePattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDifferencePattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OptionalPatternContext : PatternContext {
		public PatternContext pattern() {
			return GetRuleContext<PatternContext>(0);
		}
		public OptionalPatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterOptionalPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitOptionalPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionalPattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ZeroOrMorePatternContext : PatternContext {
		public PatternContext pattern() {
			return GetRuleContext<PatternContext>(0);
		}
		public ZeroOrMorePatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterZeroOrMorePattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitZeroOrMorePattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitZeroOrMorePattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UpToPatternContext : PatternContext {
		public PatternContext pattern() {
			return GetRuleContext<PatternContext>(0);
		}
		public UpToPatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterUpToPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitUpToPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUpToPattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntersectionPatternContext : PatternContext {
		public PatternContext[] pattern() {
			return GetRuleContexts<PatternContext>();
		}
		public PatternContext pattern(int i) {
			return GetRuleContext<PatternContext>(i);
		}
		public IntersectionPatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterIntersectionPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitIntersectionPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntersectionPattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PredefinedClassPatternContext : PatternContext {
		public ITerminalNode PredefinedClass() { return GetToken(SpecParser.PredefinedClass, 0); }
		public PredefinedClassPatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterPredefinedClassPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitPredefinedClassPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredefinedClassPattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AnyPatternContext : PatternContext {
		public AnyPatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterAnyPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitAnyPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpecParserVisitor<TResult> typedVisitor = visitor as ISpecParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnyPattern(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NegatePatternContext : PatternContext {
		public PatternContext pattern() {
			return GetRuleContext<PatternContext>(0);
		}
		public NegatePatternContext(PatternContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
